--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio Website</title>
+    <title>Rishabh Dev's Portfolio</title>
     <meta name="Author" content="" />
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 
@@ -55,7 +55,7 @@
                             <a class="nav-link" href="#">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Portfolio</a>
+                            <a class="nav-link" href="./img/RISHABH%20DEV.pdf" target="_blank">Portfolio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Pages</a>
@@ -98,7 +98,7 @@
                         <div class="site-button">
                             <div class="d-flex flex-row flex-wrap">
                                 <button type="button" class="btn button primary-button mr-4 text-uppercase">Hire Me</button>
-                                <button type="button" class="btn button secondary-button text-uppercase">Get CV</button>
+                                <button type="button" class="btn button secondary-button text-uppercase"><a href="./img/RISHABH%20DEV.pdf" target="_blank" style="text-decoration: none">Get CV</a> </button>
                             </div>
 
 
@@ -153,7 +153,9 @@
                             </p>
                         </div>
                         <button type="button" class="btn button primary-button text-uppercase">
-                            download cv
+                            
+                            <a href="./img/RISHABH%20DEV.pdf" target="_blank" style="text-decoration: none" >download cv</a>
+                            
                         </button>
 
                     </div>
